2011-07-08  Takashi Kato  <ktakashi@ymail.com>

	* src/cache.c (compiled cache): introduced compiled cache mechanism.

	* src/extlib.stub (sagittarius): added read-directory and clean-cache.

2011-06-30  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/encoding/sjis.scm (encoding sjis): added sjis-codec.

2011-06-29  Takashi Kato  <ktakashi@ymail.com>

	* src/codec.h: prepared for custom codec.

2011-06-26  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/base64.scm (rfc base64): changed to use define-optional
	instead of case-lambda.

	* sitelib/rfc/quoted-printable.scm (rfc quoted-printable): introduced
	(rfc quoted-printable) library.

2011-06-23  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/uri.scm (rfc uri): added RFC3986 uttility library.

	* src/null.stub (null): fixed get-line method.

	* src/library.c (encode_string): added encoding method to convert
	library name to path.

	* ext/regex/regex.c: fixed some bugs.

	* sitelib/srfi/%3a2/and-let%2a.scm (srfi :2 and-let*): added srfi-2.

	* sitelib/text/parse.scm (text parse): addes parse input library.

	* sitelib/rfc/%3a5322.scm (rfc :5322): added rfc 5322 utility library.

2011-06-22  Takashi Kato  <ktakashi@ymail.com>

	* ext/regex/sagittarius/regex.scm (sagittarius regex): introduced Java
	compatible regular expression library.

2011-06-17  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub, src/extlib.stub (display write newline write/ss format):
	added open check and output port check.
	
2011-06-16  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (Sg_PseudoClosePort): fixed stupid bug.

	* ext/socket/sagittarius/socket.scm (sagittarius socket): socket library
	has been added.

2011-06-08  Takashi Kato  <ktakashi@ymail.com>

	* ext/time/time.c (sagittarius time): introduced first version of time
	library.

2011-06-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/match.scm (match): introduced Andrew Wright's match.

	* autogen.sh: use sash instead of Ypsilon to generate stub
